<resources>
    <string name="app_name">iC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="cancelar">CANCELAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="kg">Kg</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="msj_peso_incorrecto">El peso ingresado es incorrecto. Por favor intente nuevamente.</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancelar</string>
    <string name="alert_dialog_peso_incorrecto">El peso ingresado es INCORRECTO. Por favor intente nuevamente. Muchas gracias.</string>
    <string name="alert_dialog_peso_correcto">El peso ingresado se ha guardado correctamente. Muchas gracias.</string>
    <string name="ingrese_fc">Por favor utilice el medidor automático de presión para conocer su Presión Arterial y Frecuencia Cardíaca. Luego, complete los siguientes datos:</string>
    <string name="fc_cargada">Ud ya cargó la medición de su Presión Arterial y Frecuencia Cardíaca del día de hoy. \n
        Muchas gracias.</string>
    <string name="alert_dialog_datos_correctos">Sus mediciones se han guardado correctamente. \n
        Muchas gracias.</string>
    <string name="sintomas_cargados">Ud ya contestó las preguntas sobre sus síntomas del día de hoy. \n
        Muchas gracias</string>
    <string name="ingrese_sintomas">Por favor conteste la siguiente pregunta sobre sus síntomas.</string>
    <string name="tab_peso">PESO</string>
    <string name="tab_fc">PRESION ARTERIAL Y FRECUENCIA CARDIACA</string>
    <string name="tab_sintomas">SINTOMAS</string>
    <string name="step_counter">
         android.hardware.sensor.stepcounter
   </string>
    <string name="step_detector">
         android.hardware.sensor.stepdetector
   </string>
    <string name="title_activity_sos_location">Map</string>
    <string name="btn_buscar">Buscar</string>
    <string name="direccion">Dirección</string>
    <string name="btn_seleccionar">Seleccionar</string>
    <string name="btn_llamar">LLAMAR</string>
    <string name="msj_gps_cancelado">Ud. canceló el permiso para acceder a su ubicación actual. Se enviará el pedido de auxilio pero SIN su ubicación actual.</string>
    <string name="cargando">Cargando...</string>
    <string name="sos_llamar">¿Desea llamar una ambulancia?</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="msj_gps_cancelado_llamar">Al cancelar el permiso de usar el GPS se envió un pedido de auxilio SIN su ubicación actual.\n
        Por favor llame a su ambulancia, cuidador o médico indicando dónde se encuentra para que puedan asistirlo o presione nuevamente el botón de SOS y permita que el dispositivo
        acceda a su ubicación actual.</string>
    <string name="ubicacion">La ubicación que se enviará a sus contactos es: \n </string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Completar</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_horarios_mediciones">HORARIOS/MEDICIONES</string>
    <string name="pref_summary_auto_delete">Delete</string>
    <string name="pref_title_auto_delete">Delete title</string>
    <string name="pref_summary_delete_limit">delete limit</string>
    <string name="pref_title_sms_delete">title sms delete</string>
    <string name="pref_title_mms_delete">title mms delete</string>
    <string name="pref_sms_storage_title">sms storage title</string>
    <string name="pref_informacion_importante">INFORMACION</string>
    <string name="pref_header_peso">Peso</string>
    <string name="pref_header_fc">Presión Arterial y Frecuencia Cardíaca</string>
    <string name="pref_header_sintomas">Síntomas</string>
    <string name="pref_header_medicación">Medicación</string>
    <string name="pref_header_turno_medico">Turno Médico</string>
    <string name="pref_header_horarios_recordatorios">Horarios/Recordatorios</string>
    <string name="pref_header_datos_personales">Datos Personales</string>
    <string name="pref_header_personal_salud">Datos Personal de Salud</string>
    <string name="pref_header_contacto_sos">Contacto Cuidador/Ambulancia</string>
    <string name="horario_defecto">08:00</string>
    <string name="pref_nombre">Nombre</string>
    <string name="pref_apellido">Apellido</string>
    <string name="pref_mail_usuario">Correo Electrónico</string>
    <string name="pref_celular">Número de Celular</string>
    <string name="configuracion">Configuración</string>
    <string name="alarma">ALARMA</string>
    <string name="tab_pregfrec">Preguntas Frecuentes</string>
    <string name="tab_wikiCardio">WikiCardio</string>
    <string name="recordatorio_accion">Recuerde monitorearse</string>
    <string name="recordatorio_saludable">Consejo Saludable</string>
    <string name="sin_recordatorios">No tiene ningún recordatorio</string>
    <string name="alert_dialog_problemasBD">Hubo un problema con el guardado de su medición. Por favor intente nuevamente.</string>
    <string name="errorBD">Hubo un error al guardar los datos. Por favor intente nuevamente</string>
    <string name="sintomas_continuar">Su respuesta se guardó correctamente. \n
        Aún quedan algunas preguntas más sobre sus síntomas. \n
        Por favor continue contestando.</string>
    <string name="sintomas_respuesta_mucho">Mucho</string>
    <string name="sintomas_respuesta_muchisimo">Muchísimo</string>
    <string name="sintomas_respuesta_si">Si</string>
    <string name="sintomas_respuesta_poco">Poco</string>
    <string name="sintomas_respuesta_muy_poco">Muy Poco</string>
    <string name="sintomas_respuesta_no">No</string>
    <string name="title_activity_view_consejo_saludable">ActivityViewConsejoSaludable</string>
    <string name="pref_header_consejo_saludable">Consejos Saludables</string>
    <string name="horario_defecto_consejos_saludables">10:00</string>
    <string name="consejo_saludable">Consejo Saludable</string>
    <string name="consulta_medicamento">¿Dejó de tomar algún medicamento últimamente?</string>
    <string name="indique_medicamento">Describa qué medicamento dejó de tomar últimamente:</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="celular">Celular</string>
    <string name="crear">CREAR</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="salir">SALIR</string>
    <string name="puntaje">Puntaje</string>
    <string name="cero">0</string>
    <string name="encuestas_contestadas">ENCUESTAS CONTESTADAS</string>
    <string name="encuestas_textPrincipal">Por favor seleccione cada una de las encuestas para poder contestarlas. \n
        Cuando termine de responder TODAS las encuestas presione el botón \"ENCUESTAS CONTESTADAS\" para eliminar este recordatorio. \n
        Muchas gracias</string>
    <string name="pref_frecuencia_notificaciones">FRECUENCIA/NOTIFICACIONES</string>
    <string name="titulo_servicio_tecnico">SOLICITAR AYUDA TECNICA</string>
    <string name="msj_servicio_tecnico">Si necesita ayuda con el manejo de la App, ingrese su número de celular y nos comunicaremos con Ud</string>
</resources>