<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:padding="5dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/titulo_servicio_tecnico"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_msj_st"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:padding="5dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/msj_servicio_tecnico"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:hint="@string/celular"
        android:inputType="phone"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="22sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
        <!--  android:layout_below="@+id/linear_layout_peso"-->

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancelar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_solicitar_st"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/titulo_servicio_tecnico"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>