<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:id="@+id/textView_pregunta"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.3"
        android:gravity="center_vertical|center_horizontal"
        android:padding="5dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/consulta_medicamento"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="0.1"
        android:orientation="horizontal">
        <!--  android:layout_below="@+id/linear_layout_peso"-->

        <Button
            android:id="@+id/btn_si"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/si"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no"
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_margin="2dp"
    android:layout_weight="0.4"
    android:orientation="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >


            <TextView
                android:id="@+id/textView_medicamento"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/indique_medicamento"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="invisible" />

        <EditText
            android:id="@+id/editText_medicamento"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_weight="0.7"
            android:visibility="invisible"
            />

        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="0.1"
        android:orientation="horizontal">
        <!--  android:layout_below="@+id/linear_layout_peso"-->

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/alert_dialog_ok"
            android:textSize="18sp"
            android:visibility="invisible"/>

    </LinearLayout>

</LinearLayout>