<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
 >

            <TextView
                android:id="@+id/textView_pregunta"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|center_horizontal"
                android:textAlignment="center"
                android:textSize="@dimen/textSize">

            </TextView>


    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:drawSelectorOnTop="true"
        android:textAlignment="center"
        android:layout_gravity="center_vertical"
        />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0.1dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:text="@string/siguiente"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/salir"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.05"
        android:layout_gravity="bottom"
        android:layout_margin="0.1dp">


        <TextView
            android:id="@+id/textView_puntaje"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/puntaje"
            android:layout_gravity="end" />

        <TextView
            android:id="@+id/textView_puntos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/cero"
            android:textAlignment="center" />

    </LinearLayout>


</LinearLayout>